# pycs

./: .gitignore  Dockerfile  README.md  del.py  package.json  pyproject.toml  requirements.txt  run.py  sample.csv  tailwind.config.js
grader_temp/code/1310455/: hello.py  hello_input.py  test_hello.py  test_hello_input.py
pycs/: :w  __init__.py  admin.py  commands.py  database.py  exc.py  extensions.py  forms.py  grader.py  login.py  models.py  routes.py
pycs/controllers/: __init__.py  assignment.py  classroom.py  user.py
pycs/grader/: GradingStrategy.py  ICS3UGrader.py  ICS4UGrader.py  __init__.py
pycs/models/: __init__.py  assignment.py  classroom.py  user.py  user_assignment.py  user_classroom.py  weighting.py
pycs/static/: output.css  script.js  style.css
pycs/templates/: 401.html  404.html  _button.html  _flash.html  _formhelpers.html  _lists.html  app.html  assignment.html  base.html  changepass.html  classes.html  joinclass.html  landing.html  login.html  register.html  student_home.html  view_assignment.html
pycs/templates/admin/: index.html
pycs/templates/auth/: changepass.html  login.html  register.html
pycs/templates/teacher/: assignment_form.html  class_form.html  classes.html  home.html  import_assignment.html  index.html  view_assignment.html  view_assignments.html  (+6 more)
pycs/views/: __init__.py  auth.py  main.py  teacher.py
tests/: conftest.py  pytest.ini  test_app.py  test_auth.py  test_db.py  test_factory.py  test_grader.py  test_index_routes.py
tests/resources/: bad_comments.py  bad_comments2.py  bad_comments3.py  goodbye.py  hello.py
