[project]
name = "pycs"
version = "1.0.0"
description = "Python code checker / grader"
dependencies = [
    "flask==2.2.3",
    "flask_login==0.6.2",
    "flask_wtf==1.1.1",
    "flask_admin==1.6.1",
    "sqlalchemy==2.0.20",
    "gunicorn",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pycs"]
